--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,18 @@
-rootProject.name = "BrotherPrintLibrary"
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+rootProject.name = 'BrotherPrintLibrary'
 include ':library'
