--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = 'BrotherPrintLibrary'
-include ':library'
+rootProject.name = "BrotherPrintLibrary"
+include(":library")
